# FOP_C-

./: ChangeRadius.cpp  ChangeToMod.cpp  ChangeToReverse.cpp  README.md  main.cpp  voider.h
OP_1/: CMakeLists.txt  ChangeLines.cpp  ChangeRadius.cpp  ChangeToMod.cpp  ChangeToReverse.cpp  main.cpp
OP_2/: CMakeLists.txt  Operations.cpp  Writers.cpp  header.h  main.cpp
OP_3/: CMakeLists.txt  header.h  header_2.h  main.cpp  main_2.cpp  void.cpp  void_2.cpp
OP_4/: CMakeLists.txt  main.cpp  tmp.cpp
OP_5/: CMakeLists.txt  Pair.cpp
op4/: CMakeLists.txt  main.cpp
op4/App/: app.cpp  app.h
op4/Figures/: hexagon.cpp  hexagon.h  line.cpp  line.h
op4/Interface/: BaseCObject.h  IDialogInitiable.h  IGeoFig.h  IPhisObject.h  IPrintable.h  Vector2D.h
